# gazebo_platoon_sim

dataspeed_dbw_gazebo_demo/: nodelets.xml  package.xml
dataspeed_dbw_gazebo_demo/cmake/: dataspeed_dbw_gazebo_demo-msg-extras.cmake  dataspeed_dbw_gazebo_demo-msg-paths.cmake  dataspeed_dbw_gazebo_demoConfig.cmake
dataspeed_dbw_gazebo_demo/launch/: generic_dbw.launch  joystick_demo_sim.launch  lane_detection.launch  lane_keep_demo.launch  lane_keep_demo_test.launch  multi_car_sim.launch  multi_car_sim_modified.launch
dataspeed_dbw_gazebo_demo/msg/: BezierArray.msg  BezierCurve.msg
dataspeed_dbw_gazebo_demo/rviz/: lane_detection.rviz  multi_car.rviz
path_following_gazebo/: CMakeLists.txt  package.xml
path_following_gazebo/scripts/: fix_gps.py  mpc.py  path_publisher.py
path_following_gazebo/src/: mpc_path_follower_ros.cpp  path_following.cpp
pure_pursuit_/cfg/: PurePursuit.cfg
pure_pursuit_/src/: pure_pursuit.cpp
